fix footer margin on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -221,12 +221,16 @@ footer {
     width: 100vw;
     padding: 0 15px;
 
+    margin-top: 25px;
+
     background-color: white;
 }
 
 @media only screen and (min-width: 769px) {
     footer {
         height: 370px;
+
+        margin: 0;
 
         display: flex;
     }
